# restful-rust

./: .gitignore  Cargo.toml  README.md
migrations/2021-03-08-224220_create_posts/: down.sql  up.sql
src/: connection.rs  controller.rs  main.rs  model.rs  models.rs  repository.rs  schema.rs  tests.rs
