[package]
name = "restful_rust"
version = "0.1.0"
authors = ["tbauer428"]
edition = "2018"


[dependencies]
rocket = "0.4.7"
rocket_codegen = "0.4.7"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"